--- a/src/app/pages/header/header.html
+++ b/src/app/pages/header/header.html
@@ -22,18 +22,18 @@
     <!-- Profile Dropdown (shown on all other pages) -->
     <div *ngIf="!isLoginPage()" class="dropdown" ngbDropdown>
       <button
-        class="btn btn-light rounded-pill d-flex align-items-center gap-2 px-3"
+        class="btn btn-light rounded-pill d-flex align-items-center gap-2 px-3 bg-gray-700 rounded"
         ngbDropdownToggle
         id="profileDropdown"
       >
         <div
           class="d-none d-sm-flex flex-column align-items-start profile-name-role"
         >
-          <span class="fw-semibold text-dark">{{
+          <span class="fw-semibold text">{{
             userData?.name || "User"
           }}</span>
           <small
-            class="text-danger align-self-lg-end"
+            class="text-secondary align-self-lg-end"
             style="font-size: 0.55rem"
           >
             {{ userData?.role || "Admin" }}
