--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,14 +1,14 @@
 <!-- Hero Section -->
  
 <section
-  class="relative bg-gradient-to-b from-gray-900 to-black text-white py-16 px-6"
+  class="relative bg-gradient-to-b from-gray-900 to-black text-white "
 >
 
   <div
     class="grid max-w-screen-xl px-4 py-4 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12"
   >   
     <div class="mr-auto place-self-center lg:col-span-7">
-       
+        
       <a
         href="/settings/edit-profile"
         (click)="navigateToProfile()"
@@ -48,6 +48,7 @@
           templates.<br /><br />
       </p>
       <p-button  label="Start Scanning" link 
+      (onClick)="scrollToTemplates()"
        ><svg
           class="w-5 h-5 ml-2 -mr-1"
           fill="currentColor"
@@ -80,28 +81,32 @@
   class="search-bar-section py-3  position-relative z-1"
 >
   <div
-    class="container d-flex flex-column flex-md-row align-items-center justify-content-center gap-3"
+    class="container flex-column flex-md-row align-items-center justify-content-center"
   >
-    <input
-      type="text"
-      class="form-control rounded-pill px-4 w-100 w-md-50"
-      placeholder="Search Template..."
-    />
-    <select class="form-select rounded-pill px-4 w-100 w-md-25">
-      <option selected disabled>Type</option>
-      <option>ID Card</option>
-      <option>Invoice</option>
-      <option>Form</option>
-    </select>
-    <button class="btn btn-dark rounded-pill px-4">Search</button>
+ <p-fluid>
+ <div class="grid grid-cols-7 gap-4">
+
+  <p-autocomplete  class="col-span-3" placeholder="Search Template..." />
+   <p-autoComplete class="col-span-2"
+  [(ngModel)]="selectedType"
+  [suggestions]="filteredTypes"
+  (completeMethod)="filterTypes($event)"
+  [dropdown]="true"
+  placeholder="Type">
+  </p-autoComplete   >
+    <button class="btn btn-dark rounded-pill col-span-1">Search</button>
+  </div>
+ </p-fluid>
+ 
   </div>
 </div>
 
 <!-- Template Cards Section -->
-<section class="container mx-auto mt-12 px-4 bg-gradient-to-b from-gray-900 to-black"  >
+<section class="container mx-auto mt-12 px-4 "  >
   <h3 class="text-2xl mt-6 font-bold mb-6 text-start md:text-left text-white">
     Popular Templates
   </h3>
+  
   <div class=" grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-0">
     <app-template-card
       *ngFor="let template of templates"
