--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -11,7 +11,7 @@
     </div>
 
     <form
-      class="w-full max-w-md mx-auto space-y-6"
+      class="w-full max-w-md mx-auto space-y-5"
       (ngSubmit)="onLogin()"
       #loginForm="ngForm"
     >
@@ -71,23 +71,25 @@
           />
           Remember me
         </label>
-        <a href="#" class="text-indigo-500 hover:text-indigo-400 font-medium"
-          >Forgot password?</a
-        >
+        <p-button label="Forgot password?" link />
+        
       </div>
 
       <!-- Submit -->
-      <!-- Submit -->
- <div class="w-full max-w-md mx-auto mt-6">
-  <p-button
-    class="w-full"
-    label="Sign in now"
-    icon="pi pi-check"
-    [loading]="loading"
-    type="submit"
-  ></p-button>
-</div>
-
+       <div class=" flex justify-center items-center">
+       <button type="submit" class="w-full bg-purple-600 text-white rounded-3 p-2 hover:bg-purple-700 transition-colors">
+            Sign in now
+          </button></div>
+      <!-- Submit
+      <div class=" flex justify-center items-center">
+        <p-button
+        class=" flex justify-center items-center"
+          label="Sign in now"
+          icon="pi pi-check"
+          [loading]="loading"
+          type="submit"
+        ></p-button>
+      </div> -->
 
       <div *ngIf="errorMessage" class="text-red-500 mt-3 text-center">
         {{ errorMessage }}
@@ -102,9 +104,10 @@
 
       <!-- Social Buttons -->
       <div class="flex justify-center items-center">
-        <button
-          type="button"
-          class="text-white bg-[#24292F] hover:bg-[#24292F]/90 focus:ring-4 focus:outline-none focus:ring-[#24292F]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-gray-500 dark:hover:bg-[#050708]/30 me-2 mb-2"
+        <p-button
+          label="Sign in with Google"
+          variant="text"
+          severity="secondary"
         >
           <svg
             class="w-4 h-4 me-2"
@@ -117,24 +120,22 @@
               fill-rule="evenodd"
               d="M8.842 18.083a8.8 8.8 0 0 1-8.65-8.948 8.841 8.841 0 0 1 8.8-8.652h.153a8.464 8.464 0 0 1 5.7 2.257l-2.193 2.038A5.27 5.27 0 0 0 9.09 3.4a5.882 5.882 0 0 0-.2 11.76h.124a5.091 5.091 0 0 0 5.248-4.057L14.3 11H9V8h8.34c.066.543.095 1.09.088 1.636-.086 5.053-3.463 8.449-8.4 8.449l-.186-.002Z"
               clip-rule="evenodd"
-            />
-          </svg>
-          Sign in with Google
-        </button>
+            /></svg>
+          </p-button>
       </div>
 
       <div class="text-center mt-8 text-gray-400">
         <p>
           Don't have an account?
-          <a class="text-indigo-500 hover:text-indigo-400 font-medium"
-            >Sign up here</a
-          >
+           <p-button label="Sign up here" link />
+         
         </p>
       </div>
     </form>
   </div>
   <!-- Right Side: Illustration -->
   <div class="w-full md:w-1/2 relative">
+  
     <a
       href="#"
       class="absolute top-6 left-6 bg-white/10 backdrop-blur-sm text-white px-4 py-2 rounded-full text-sm hover:bg-white/20 transition-colors z-10"
